config and liner

--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/tearfulmerlin/ls9/issues"
   },
-  "homepage": "https://github.com/tearfulmerlin/ls9#readme"
+  "homepage": "https://github.com/tearfulmerlin/ls9#readme",
+  "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
